name:                gaia
version:             0.1.0.0
synopsis:            The Gaia Implementation 
description:         Please see README.md
homepage:            https://github.com/shutkas/Gaia
license:             MIT
license-file:        LICENSE
author:              Pascal Honoré, Marcello Seri
maintainer:          pascal@alseyn.net
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     GaiaHello
                    -- below this line in alphabetical order
                     , ContentAddressableStore
                     , Gaia.Directives
                     , Gaia.Types
                     , ScanningAndRecordingManager
                     , Xcache
  build-depends:       base >= 4.7 && < 5
                    -- below this line in alphabetical order
                     , aeson
                     , bytestring
                     , directory
                     , filepath
                     , parsec
                     , scientific
                     , SHA
                     , text
                     , time
                     , unix
                     , vector
  default-language:    Haskell2010

executable gaia
  hs-source-dirs:      app
  main-is:             Gaia.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , gaia
                    -- below this line in alphabetical order
                     , aeson
                     , bytestring
                     , directory
                     , filepath
                     , SHA
                     , scientific
                     , text
                     , time
                     , unix
                     , vector
  default-language:    Haskell2010

executable gscan
  hs-source-dirs:      app
  main-is:             GScan.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , gaia
                    -- below this line in alphabetical order
                     , aeson
                     , bytestring
                     , directory
                     , filepath
                     , SHA
                     , scientific
                     , text
                     , time
                     , unix
                     , vector
  default-language:    Haskell2010

test-suite gaia-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , gaia
                    -- below this line in alphabetical order
                     , parsec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/shutkas/Gaia
