name:                gaia
version:             0.1.0.0
synopsis:            The Gaia Implementation 
description:         Please see README.md
homepage:            https://github.com/shutkas/Gaia
license:             MIT
license-file:        LICENSE
author:              Pascal Honoré, Marcello Seri
maintainer:          pascal@alseyn.net
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -fwarn-tabs
  exposed-modules:
                    -- below this line in alphabetical order
                       AesonObjectsUtils
                     , ContentAddressableStore
                     , FSRootsManagement
                     , Gaia.Directives
                     , Gaia.Types
                     , SearchEngine
                     , ScanningAndRecordingManager
                     , SystemIntegrity
                     , UserPreferences
                     , Xcache
  build-depends:       base >= 4.7 && < 5
                    -- below this line in alphabetical order
                     , aeson
                     , blaze-html
                     , bytestring
                     , directory
                     , filepath
                     , happstack-lite
                     , parsec
                     , scientific
                     , SHA
                     , system-filepath
                     , text
                     , time
                     , unix
                     , unordered-containers
                     , vector
  default-language:    Haskell2010

executable gaia-utils
  hs-source-dirs:      app
  main-is:             GaiaUtils.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fwarn-tabs
  build-depends:       base
                     , gaia
                    -- below this line in alphabetical order
                     , aeson
                     , bytestring
                     , directory
                     , filepath
                     , scientific
                     , SHA
                     , system-filepath
                     , text
                     , time
                     , unix
                     , unordered-containers
                     , vector
  default-language:    Haskell2010

executable gaia-web
  hs-source-dirs:      app
  main-is:             GaiaWeb.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fwarn-tabs
  build-depends:       base
                     , gaia
                    -- below this line in alphabetical order
                     , aeson
                     , blaze-html
                     , bytestring
                     , directory
                     , filepath
                     , happstack-lite
                     , scientific
                     , SHA
                     , system-filepath
                     , text
                     , time
                     , unix
                     , unordered-containers
                     , vector
  default-language:    Haskell2010

test-suite gaia-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base
                     , gaia
                    -- below this line in alphabetical order
                     , parsec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/shutkas/Gaia
